# EasyLinux

./: .gitignore  CMakeLists.txt  Makefile  README.md  greetings.txt  main  main.c  resources.qrc
include/: MainWindow.h  SplashScreen.h  StickyNote.h
src/: MainWindow.cpp  SplashScreen.cpp  StickyNote.cpp  main.c  main.cpp
